force-app/main/default/objects/Company_Collection__c/Company_Collection__c.object-meta.xml
<CustomObject>
    <label>Company Collection</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Company Collection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>