force-app/main/default/objects/Company_Collection__c/fields/beauhurst_id__c.field-meta.xml
<CustomField>
    <fullName>beauhurst_id__c</fullName>
    <externalId>true</externalId>
    <label>beauhurst id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>