force-app/main/default/objects/Company_Collection__c/fields/collection_name__c.field-meta.xml
<CustomField>
    <fullName>collection_name__c</fullName>
    <label>collection name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>