force-app/main/default/objects/Company_Collection__c/fields/count__c.field-meta.xml
<CustomField>
    <fullName>count__c</fullName>
    <label>count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>