force-app/main/default/objects/Company_Collection__c/fields/sync__c.field-meta.xml
<CustomField>
    <fullName>sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sync</label>
    <type>Checkbox</type>
</CustomField>